# living_neural

./: .gitignore  Cargo.toml  README.md  \  generate_pitches.py  generated_pitches.rs
assets/: world_fragment.glsl  world_vertex.glsl
src/: main.rs
src/audio_processing/: chords.rs  generate_audio.rs  generate_difference.rs  mod.rs  wav.rs
src/buffer_initializer/: mod.rs
src/cmd_handler/: mod.rs
src/kernels/: mod.rs
src/shaders/: fragment.rs  mod.rs  vertex.rs
